# FIN-Research-Agent

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  START_HERE.command  alembic.ini  pyproject.toml  sample_financials.json
backend/: .env.example  AGENTS.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_stage2_metadata_fields.py  0003_professional_metric_metadata.py  0004_stage3_official_source_coverage.py  0005_stage5_peers_valuation.py  0006_stage6_reports.py  0007_stage7_portfolio_risk_alerts.py
backend/src/finresearch/: __init__.py  settings.py  worker.py
backend/src/finresearch/ai/: __init__.py  base.py  ollama.py
backend/src/finresearch/api/: dependencies.py  main.py
backend/src/finresearch/cli/: __init__.py  live_source_smoke.py  main.py
backend/src/finresearch/connectors/: __init__.py  base.py  direct_web.py  health.py  registry.py  rss.py  utils.py
backend/src/finresearch/data_sources/: akshare_source.py  base.py  cninfo_live.py  cninfo_source.py  exchange_source.py  official.py  official_registry.py  sec_source.py
backend/src/finresearch/database/: models.py  session.py  types.py
backend/src/finresearch/documents/: __init__.py  chunker.py  parser.py  storage.py
backend/src/finresearch/metrics/: __init__.py  context.py  definitions.py
backend/src/finresearch/repositories/: companies.py  connector_status.py  data_quality.py  documents.py  external_sources.py  filings.py  financial_facts.py  jobs.py  market.py  portfolios.py  prices.py  research.py  watchlists.py
backend/src/finresearch/services/: analysis.py  artifact_download.py  benchmark_selection.py  company_analysis.py  company_charts.py  company_sync.py  document_ingest.py  document_search.py  portfolio.py  (+14 more)
backend/tests/: test_alembic_migrations.py  test_api.py  test_connectors.py  test_database_session.py  test_financial_ui_coverage.py  test_market_models.py  test_market_snapshot_service.py  test_metric_registry.py  test_ollama.py  test_period_normalization.py  test_price_analytics.py  test_professional_metrics.py  test_repositories.py  test_research_background.py  test_stage3_official_sources.py  test_stage4_analysis.py  test_stage5_peers_valuation.py  test_stage6_reports.py  test_stage7_portfolio_risk_alerts.py  test_stage8_production_security.py
fin-research-agent/: .env.example  AGENTS.md  pyproject.toml
fin-research-agent/app/: cli.py  document_store.py  openai_research.py  reporting.py  sec_client.py
fin-research-agent/tests/: test_document_store.py  test_reporting.py  test_sec_client.py
(+126 files in other folders)
