[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finresearch-backend"
version = "0.1.0"
description = "FastAPI backend for Fin Research Agent"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.8",
  "sqlalchemy>=2.0",
  "psycopg>=3.2",
  "alembic>=1.13",
  "typer>=0.12",
  "rich>=13.7",
  "requests>=2.32",
  "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
  "mypy>=1.10",
  "types-requests>=2.32",
  "detect-secrets>=1.5",
  "pip-audit>=2.7",
]
akshare = ["akshare"]
pdf = ["pypdf"]

[project.scripts]
finresearch-backend = "finresearch.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/finresearch"]

[tool.ruff]
target-version = "py310"
line-length = 100
