[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fin-research-agent"
version = "0.1.0"
description = "Evidence-first financial research CLI using OpenAI web search and optional Agent Reach connectors"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.100.0",
  "pydantic>=2.8.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.scripts]
finresearch = "app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py310"
line-length = 100
